# Cerberus

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  package.xml
.devcontainer/: Dockerfile  configure_xauth.bash  devcontainer.json
config/: hardware_a1_vilo_config.yaml  hardware_a1_vins_config.yaml  vileom_real_sense_xsens.yaml  vins_fusion_real_sense_xsens.yaml  vins_rviz_config.rviz
config/a1_config/: hardware_a1_vilo_config.yaml  hardware_a1_vins_config.yaml
config/go1_config/: go1_realsense_left.yaml  go1_realsense_right.yaml  (+6 more)
launch/: front_camera_read.launch
output/: Copy_of_vio_path_visualize_0904_with_ground_truth.m  extrinsic_parameter.csv  ground_truth_forward_backward_traj_compare.eps  ground_truth_forward_backward_traj_compare_bias_model.eps  ground_truth_forward_height_compare.eps  ground_truth_forward_height_compare_bias_model.eps  ground_truth_forward_traj_compare.eps  ground_truth_forward_traj_compare.fig  vectorfig.eps  vilo2021-09-08_23-54-28.csv  vilo2021-09-08_23-56-04.csv  vilo2021-09-08_23-58-11.csv  vilo2021-09-09_00-01-44.csv  vilo2021-09-09_00-03-36.csv  vilo2021-09-09_00-18-44.csv  vilo2021-09-09_00-20-50.csv  vilo2021-09-09_00-22-56.csv  vilo2021-09-09_00-24-50.csv  vilo2021-09-09_00-29-49.csv  vilo2021-09-09_00-33-09.csv  vilo2021-09-09_00-38-59.csv  vilo2021-09-09_00-39-44.csv  vilo2021-09-09_00-40-16.csv  vilo2021-09-09_01-05-46.csv  vilo2021-09-09_01-34-52.csv  vilo2021-09-09_01-52-27.csv  vilo2021-09-09_01-54-31.csv  vilo2021-09-09_02-16-47.csv  vilo2021-09-09_02-18-38.csv  vilo2021-09-09_02-20-05.csv  vilo2021-09-09_10-02-44.csv  vilo2021-09-09_10-50-57.csv  vilo2021-09-09_11-05-03.csv  vilo2021-09-09_11-06-58.csv  vilo2021-09-09_11-16-08.csv  vilo2021-09-09_11-17-22.csv  vilo2021-09-09_11-18-08.csv  vilo2021-09-09_11-19-16.csv  vilo2021-09-09_11-20-20.csv  vilo2021-09-09_11-21-25.csv  (+43 more)
script/: contact_model_design.m  foot_force_process.m
src/: feature_track_test.cpp  main.cpp
src/utils/: utility.h  (+6 more)
(+96 files in other folders)
